--- a/acerca.html
+++ b/acerca.html
@@ -22,13 +22,15 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.10.1/css/mdb.min.css" rel="stylesheet">
+
+
 </head>
 <body>
     
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger " href="#page-top" style="font-family:Ar Destine;"> <span class="mb-0 h2 ">CE.SISA</span></a>
+          <a class="navbar-brand js-scroll-trigger " href="index.html" style="font-family:Ar Destine;"> <span class="mb-0 h2 ">CE.SISA</span></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -89,9 +91,12 @@
       <section id="about">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-9 mx-auto">
               <h1>Confecciones empresariales SISA</h1>
-              <img src="imagenes/logo.png" width="350" height="301">
+              <div class="px-5 ml-5">
+                <img src="imagenes/logo.png" width="350" height="301">
+              </div>
+              
               <p class="lead">Somos una empresa 100% Mexicana</p>
               <ul>
                 <li>Somos una empresa consiente de lo que el cliente espera, por lo que siempre trabajamos, con el objetivo de brindar satisfacción a todos aquellos que confian en nosotros. Por ello, ofrecemos precios razonables, calidad, seriedad, eficiencia y puntualidad. </li>
