--- a/period.html
+++ b/period.html
@@ -133,7 +133,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-12">
-					<ul class="nav nav-tabs" style="margin-bottom: 15px;">
+					<ul class="nav nav-tabs" style="margin-bottom: 15px; background-color: black">
 					  	<li class="active"><a href="#new" data-toggle="tab">Nuevo</a></li>
 					  	<li><a href="#list" data-toggle="tab">Lista</a></li>
 					</ul>
